tests/images.txt
registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.4
registry1.dso.mil/ironbank/opensource/kubernetes/kubectl:v1.29.4
