tests/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-istio-export-to
policies:
  - require-istio-export-to.yaml
resources:
  - vs-resources.yaml
results:
  - policy: require-istio-export-to
    rule: block-wildcard-export-virtualservice
    resource: blocked-virtual-service-wildcard
    namespace: istio-system  # forces rule to be skipped
    kind: VirtualService
    result: skip
